<resources>
    <string name="app_name">UngDungQuanAn</string>
    <string name="version">Phiên bản 2.0.2</string>
    <string name="TenCongty">HanHee Company</string>
    <string name="Loading">Đang tải...</string>
    <string name="email">Email</string>
    <string name="password">Mật khẩu</string>
    <string name="facebook_app_id">1731773200249960</string>
    <string name="fb_login_protocol_scheme">fb1731773200249960</string>
    <string name="dangnhapgoogle">Đăng nhập bằng Google</string>
    <string name="dangnhapfacebook">Đăng nhập bằng Facebook</string>
    <string name="quenmatkhau">Quên mật khẩu ?</string>
    <string name="dangkymoi"><u>Đăng ký mới</u></string>
    <string name="nhaplaipassword">Nhập lại mật khẩu</string>
    <string name="dangky">Đăng ký</string>
    <string name="dangnhap">Đăng nhập</string>
    <string name="loiemail">Email bạn nhập chưa hợp lệ</string>
    <string name="loitrongthongtin">Bạn không thể bỏ trống chỗ này</string>
    <string name="loiPass">Mật khẩu đã nhập chưa trùng khớp</string>
    <string name="loiPass2">Độ dài mật khẩu phải từ 6-50 kí tự</string>
    <string name="dangxuly">Đang xử lý</string>
    <string name="loiemailtontai">Email đã được người khác đăng ký</string>
    <string name="dangnhapthatbai">Vui lòng kiểm trả lại email hoặc mật khẩu</string>
    <string name="trongthongtin">Vui lòng nhập đầy đủ thông tin</string>
    <string name="khoiphucmatkhau">Quên mật khẩu ?</string>
    <string name="chuoikhoiphucmatkhau">Vui lòng nhập địa chỉ email chính xác để tiến hành khôi phục mật khẩu.</string>
    <string name="kophaithanhvien">Bạn không phải là thành viên ?</string>
    <string name="guiemail">Gửi email</string>
    <string name="thongbaoemailkhonghople">Email không hợp lệ</string>
    <string name="emailkhongtontai">Email không tồn tại hoặc không hợp lệ</string>
    <string name="odau">Ở đâu</string>
    <string name="angi">Ăn gì ?</string>
    <string name="moinhat">Mới nhất</string>
    <string name="danhmuc">Danh mục</string>
    <string name="khuvuc">TP HCM</string>
    <string name="gantoi">Gần tôi</string>
    <string name="giaohang">Giao hàng</string>
    <string name="trochoi">Trò chơi</string>
    <string name="danhgia">Đánh giá</string>
    <string name="blog">Blogs</string>
    <string name="topmember">Top Member</string>
    <string name="datmon">Đặt món</string>
    <string name="thich">Like</string>
    <string name="binhluan">Bình luận</string>
    <string name="luulai">Lưu lại</string>
    <string name="chiase">Chia sẻ</string>
    <string name="taianh">Tải ảnh</string>
    <string name="checkin">Check-in</string>
    <string name="dangmocua">Đang mở cửa</string>
    <string name="dadongcua">Đã đóng cửa</string>
    <string name="nhaptenwifi">Nhập tên Wifi</string>
    <string name="nhapmatkhauwifi">Nhập mật khẩu Wifi</string>
    <string name="dongy">Đồng ý</string>

</resources>
