<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    tools:context=".View.Wifi.PopupWifiActivity">

    <EditText
        android:id="@+id/edtTenWifi"
        android:hint="@string/nhaptenwifi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edtMatkhauWifi"
        android:hint="@string/nhapmatkhauwifi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:id="@+id/btnDongy"
        android:text="@string/dongy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>