<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutQMK"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".View.ManHinhQuenMatKhau.QuenMatKhauActivity"

    >

    <LinearLayout
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:animateLayoutChanges="true"
        android:background="@color/transparentBGDangNhap"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="30dp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp">

        <ImageView

            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/foodytext" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginBottom="25dp"
            android:layout_marginTop="25dp"
            android:paddingLeft="5dp"
            android:text="@string/khoiphucmatkhau"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="25sp" />


        <EditText
            android:id="@+id/edtEmailQuenMK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/ic_email_white"

            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textPersonName"
            android:textColor="@color/colorAccent"

            android:textColorHint="@color/colorAccent"
            android:theme="@style/EditTextTheme" />

        <TextView
            android:id="@+id/txtThongbao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:paddingLeft="5dp"
            android:text="@string/chuoikhoiphucmatkhau"
            android:textColor="#FF0"
            android:textSize="15sp" />


        <Button
            android:id="@+id/btnGuiemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/radius_button"

            android:drawablePadding="10dp"
            android:drawableTint="@color/colorAccent"
            android:paddingLeft="80dp"

            android:paddingRight="80dp"
            android:text="@string/guiemail"
            android:textColor="@color/colorAccent"

            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"

            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtSaiEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"


                android:layout_weight="1"
                android:paddingLeft="5dp"
                android:text="@string/kophaithanhvien"
                android:textColor="@color/colorPrimaryRed"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/txtDangkyMoi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/dangkymoi"
                android:textColor="@color/colorAccent"
                android:textSize="13sp" />
        </LinearLayout>


    </LinearLayout>


</RelativeLayout>
