<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBGTrangchu"
    android:orientation="vertical">


    <RadioGroup
        android:id="@+id/rdGroupTab"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/colorAccent"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rdMoinhat2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/changebackground_tab"
            android:button="@color/transparent"
            android:checked="true"
            android:drawableBottom="@drawable/ic_keyboard_arrow_down_black_24dp"
            android:gravity="center"
            android:text="@string/moinhat"
            android:textColor="@drawable/custom_changetext_tab_trangchu"

            />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorBGTrangchu" />

        <RadioButton
            android:id="@+id/rdDanhmuc2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/changebackground_tab"
            android:button="@color/transparent"
            android:drawableBottom="@drawable/ic_keyboard_arrow_down_black_24dp"
            android:gravity="center"
            android:text="@string/danhmuc"
            android:textColor="@drawable/custom_changetext_tab_trangchu" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorBGTrangchu" />

        <RadioButton
            android:id="@+id/rdKhuvuc2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/changebackground_tab"
            android:button="@color/transparent"
            android:drawableBottom="@drawable/ic_keyboard_arrow_down_black_24dp"
            android:gravity="center"
            android:text="@string/khuvuc"
            android:textColor="@drawable/custom_changetext_tab_trangchu" />


    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="angi" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">


                <Button

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@color/colorAccent"
                    android:drawableLeft="@drawable/nearby"
                    android:drawablePadding="10dp"
                    android:gravity="left|center"
                    android:padding="10dp"
                    android:text="@string/gantoi"
                    android:textAllCaps="false" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@color/colorAccent"
                    android:drawableLeft="@drawable/order"
                    android:drawablePadding="10dp"
                    android:gravity="left|center"
                    android:padding="10dp"
                    android:text="@string/giaohang"
                    android:textAllCaps="false" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@color/colorAccent"
                    android:drawableLeft="@drawable/gameandfun"
                    android:drawablePadding="10dp"
                    android:gravity="left|center"
                    android:padding="10dp"
                    android:text="@string/trochoi"
                    android:textAllCaps="false" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@color/colorAccent"
                    android:drawableLeft="@drawable/review"
                    android:drawablePadding="10dp"
                    android:gravity="left|center"
                    android:padding="10dp"
                    android:text="@string/danhgia"
                    android:textAllCaps="false" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@color/colorAccent"
                    android:drawableLeft="@drawable/user"
                    android:drawablePadding="10dp"
                    android:gravity="left|center"
                    android:padding="10dp"
                    android:text="@string/topmember"
                    android:textAllCaps="false" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@color/colorAccent"
                    android:drawableLeft="@drawable/blog"
                    android:drawablePadding="10dp"
                    android:gravity="left|center"
                    android:padding="10dp"
                    android:text="@string/blog"
                    android:textAllCaps="false" />


            </LinearLayout>


        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>

</LinearLayout>