<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LayoutDN"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".View.ManHinhDangNhap.DangNhapActivity">


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/transparentBGDangNhap"
        android:orientation="vertical"
        android:paddingBottom="20dp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:paddingTop="50dp">

        <TextView
            android:id="@+id/txtDangkymoi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:text="Version 1.0 by HanHee"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="200dp"
            android:layout_height="100dp"

            android:layout_gravity="center"

            app:srcCompat="@drawable/foodytext" />

        <EditText
            android:id="@+id/edtEmailDN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/ic_perm_identity_white_24dp"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textPersonName"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent"
            app:backgroundTint="@color/colorAccent" />

        <EditText
            android:id="@+id/edtPasswordDN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/ic_lock_outline_white_24dp"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent"
            app:backgroundTint="@color/colorAccent" />


        <Button
            android:id="@+id/btnDangnhap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/radius_button"
            android:drawableLeft="@drawable/ic_exit_to_app_white_24dp"
            android:drawablePadding="10dp"
            android:drawableTint="@color/colorAccent"
            android:paddingLeft="60dp"

            android:paddingRight="60dp"
            android:text="@string/dangnhap"
            android:textColor="@color/colorAccent"

            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/colorAccent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="hoặc"
                android:textColor="@color/colorAccent" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/colorAccent" />

        </LinearLayout>

        <Button
            android:id="@+id/btnDangnhapFacebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="10dp"
            android:background="@color/colorFacebook"
            android:drawableLeft="@drawable/icon_facebook"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="25dp"
            android:text="@string/dangnhapfacebook"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent" />

        <Button
            android:id="@+id/btnDangNhapGoogle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="10dp"
            android:background="@color/colorPrimaryRed"
            android:drawableLeft="@drawable/icon_google_2"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="25dp"
            android:text="@string/dangnhapgoogle"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtQuenmatkhau"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/quenmatkhau"
                android:textColor="@color/colorAccent"

                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtDangkymoi"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/dangkymoi"
                android:textColor="@color/colorAccent"

                android:textStyle="bold" />
        </LinearLayout>


    </LinearLayout>


</RelativeLayout>